--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/estilos.css">
   <link rel="icon" type="image/svg+xml" href="img/logotipo.svg">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <title>Concurso de tapas</title>
 </head>
 <body>
