--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <a href="index.html" class="home-link">Concurso de tapas</a>
     </div>
     
-    <div class="buscador">
-        <button id="lupa"><img src="img/search_64.svg" alt="Buscar"></button>
-        <form action="">
-            <input type="text" placeholder="Buscar tapas...">
+        <div class="buscador">
+        <form class="d-flex">
+          <input class="form-control mr-sm-2" type="search" placeholder="Buscar tapas..." aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><img src="img/search.svg" alt="Buscar"></button>
         </form>
-    </div>
+      </div>
   </header>
 
   <main>
@@ -34,7 +34,7 @@
         <button type="submit">Añadir</button>
       </form>
     </section>
-    
+
     <div id="carouselExampleInterval" class="carousel slide slider_container" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active slider" data-bs-interval="5000">
