--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/estilos.css">
+  <link rel="stylesheet" href="css/galeria.css">
   <link rel="icon" type="image/svg+xml" href="img/logotipo.svg">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <title>Concurso de tapas</title>
@@ -15,13 +15,13 @@
         <a href="index.html" class="home-link"><img src="img/logotipo.svg" alt="Logotipo"></a>
         <a href="index.html" class="home-link">Concurso de tapas</a>
     </div>
-    
-        <div class="buscador">
-        <form class="d-flex">
-          <input class="form-control mr-sm-2" type="search" placeholder="Buscar tapas..." aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><img src="img/search.svg" alt="Buscar"></button>
+      <div class="d-flex align-items-center text-end">
+        <form class="d-inline-block me-4 ">
+          <input type="search" class="form-horizontal form-control form-control-dark" placeholder="Buscar..." aria-label="Buscar">
         </form>
-      </div>
+        <a href="login.html"><button type="button" class="d-inline-block btn btn-outline-dark me-2">Iniciar sesión</button></a>
+        <a href="registro.html"><button type="button" class="d-inline-block btn btn-primary">Registrarse</button></a>
+      </div>  
   </header>
 
   <main>
@@ -58,7 +58,11 @@
     </div>
     <section class="seccion-galeria">
       <h2>Galería de Tapas</h2>
-      <button id="botonFiltrarFavoritos">Mostrar Favoritos</button>
+      <form>
+        <input type="checkbox" id="checkFiltrar">
+        <!-- user-select-none es para que no se pueda seleccionar el texto, que queda feo -->
+        <label class="user-select-none" for="checkFiltrar">Mostrar Favoritos</label>
+      </form>
       <div id="galeria" class="galeria-grid"></div>
     </section>
   </main>
@@ -73,7 +77,7 @@
         <a href="https://x.com/"><img src="img/icons8-twitterx.svg" alt="x" class="logo"></a>
     </div>
   </footer>
-  <script src="js/script.js"></script>
+  <script src="js/galeria.js"></script>
   <script src="jsBootstrap/bootstrap.bundle.js"></script>
 </body>
 </html>
