--- a/login.html
+++ b/login.html
@@ -8,16 +8,33 @@
     
   </head>
   <body>
+    <header>
+      <div class="logo">
+          <a href="index.html" class="home-link"><img src="img/logotipo.svg" alt="Logotipo"></a>
+          <a href="index.html" class="home-link">Concurso de tapas</a>
+      </div>
+    </header>
     <h1>Inicio de sesión</h1>
     <form id="login" method="post" action='#'>
       <fieldset>
         <label for="email">Email: <input id="email" name="email" type="text" required /></label>
         <label for="password">Contraseña: <input id="password" name="password" type="password" required /></label>
       </fieldset>
-      <input type="submit" value="Iniciar sesión" id="btnLogin" />
+      <input type="submit" value="Iniciar sesión" id="btnLogin" class="btn"/>
     </form>
     <p class="lineaRegistro">¿No tienes cuenta? <a href="registro.html">Regístrate aquí</a>.</p>
     <p class="lineaRegistro"><a href="index.html">Volver a la galería</a></p>
     <script src="js/login.js"></script>
+
+    <footer>
+      <div>
+          <p>&copy;Concurso de tapas 2025</p>
+      </div>
+      <div>
+          <a href="https://workspace.google.com/intl/es/gmail/"><img src="img/icons8-email-64.svg" alt="email" class="logo"></a>
+          <a href="https://www.instagram.com/"><img src="img/icons8-instagram.svg" alt="instagram" class="logo"></a>
+          <a href="https://x.com/"><img src="img/icons8-twitterx.svg" alt="x" class="logo"></a>
+      </div>
+    </footer>
   </body>
 </html>
