--- a/registro.html
+++ b/registro.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <title>Registro</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/login.css" />
   </head>
   <body>
+    <header>
+      <div class="logo">
+          <a href="index.html" class="home-link"><img src="img/logotipo.svg" alt="Logotipo"></a>
+          <a href="index.html" class="home-link">Concurso de tapas</a>
+      </div>
+    </header>
     <h1>Regístrate</h1>
     <form method="post" action=''>
       <fieldset>
@@ -44,10 +51,20 @@
         <input class="inline" id="terms-and-conditions" type="checkbox" required name="terms-and-conditions" /> Aceptar la política de privacidad
       </label>
       <span id="error-privacidad"></span>
-      <input type="submit" value="Registrarse" id="btnRegistrar" name="btnRegistrar" />
+      <input type="submit" value="Registrarse" id="btnRegistrar" name="btnRegistrar" class="btn" />
     </form>
     <p class="lineaRegistro">¿Ya tienes cuenta? <a href="login.html">Inicia sesión aquí.</a></p>
     <p class="lineaRegistro"><a href="index.html">Volver a la galería</a></p>
     <script src="js/registro.js"></script>
+    <footer>
+      <div>
+          <p>&copy;Concurso de tapas 2025</p>
+      </div>
+      <div>
+          <a href="https://workspace.google.com/intl/es/gmail/"><img src="img/icons8-email-64.svg" alt="email" class="logo"></a>
+          <a href="https://www.instagram.com/"><img src="img/icons8-instagram.svg" alt="instagram" class="logo"></a>
+          <a href="https://x.com/"><img src="img/icons8-twitterx.svg" alt="x" class="logo"></a>
+      </div>
+    </footer>
   </body>
 </html>
