--- a/registro.html
+++ b/registro.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Registro</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="icon" type="image/svg+xml" href="img/logotipo.svg">
     <link rel="stylesheet" href="css/login.css" />
   </head>
   <body>
