--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
   
-  <header>
+  <header class="d-flex flex-wrap ">
     <div class="logo">
         <a href="index.html" class="home-link"><img src="img/logotipo.svg" alt="Logotipo"></a>
         <a href="index.html" class="home-link">Concurso de tapas</a>
     </div>
-      <div class="d-flex align-items-center text-end">
+      <div class="d-flex align-items-center text-end d-flex flex-wrap">
         <form class="d-inline-block me-4 ">
           <input type="search" class="form-horizontal form-control form-control-dark" placeholder="Buscar..." aria-label="Buscar">
         </form>
