--- a/login.html
+++ b/login.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="css/login.css" />
     
   </head>
-  <body>
-    <header>
-      <div class="logo">
+  <body >
+    <header >
+      <div class="logo d-flex">
           <a href="index.html" class="home-link"><img src="img/logotipo.svg" alt="Logotipo"></a>
           <a href="index.html" class="home-link">Concurso de tapas</a>
       </div>
@@ -18,7 +18,7 @@
     <h1>Inicio de sesión</h1>
     <form id="login" method="post" action='#'>
       <fieldset>
-        <label for="email">Email: <input id="email" name="email" type="text" required /></label>
+        <label for="email" >Email: <input id="email" name="email" type="text" required /></label>
         <label for="password">Contraseña: <input id="password" name="password" type="password" required /></label>
       </fieldset>
       <input type="submit" value="Iniciar sesión" id="btnLogin" class="btn"/>
