--- a/login.html
+++ b/login.html
@@ -6,11 +6,12 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="icon" type="image/svg+xml" href="img/logotipo.svg">
     <link rel="stylesheet" href="css/login.css" />
-    
+    <meta name="viewport" content="width=device-width">
+
   </head>
   <body >
     <header >
-      <div class="logo d-flex">
+      <div class="logo">
           <a href="index.html" class="home-link"><img src="img/logotipo.svg" alt="Logotipo"></a>
           <a href="index.html" class="home-link">Concurso de tapas</a>
       </div>
@@ -25,7 +26,7 @@
     </form>
     <p class="lineaRegistro">¿No tienes cuenta? <a href="registro.html">Regístrate aquí</a>.</p>
     <p class="lineaRegistro"><a href="index.html">Volver a la galería</a></p>
-    <script src="js/login.js"></script>
+   
 
     <footer>
       <div>
@@ -37,5 +38,7 @@
           <a href="https://x.com/"><img src="img/icons8-twitterx.svg" alt="x" class="logo"></a>
       </div>
     </footer>
+    <script src="js/login.js"></script>
+    <script src="jsBootstrap/bootstrap.bundle.js"></script>
   </body>
 </html>
