--- a/registro.html
+++ b/registro.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="icon" type="image/svg+xml" href="img/logotipo.svg">
     <link rel="stylesheet" href="css/login.css" />
+    <meta name="viewport" content="width=device-width">
   </head>
   <body>
     <header>
@@ -56,7 +57,7 @@
     </form>
     <p class="lineaRegistro">¿Ya tienes cuenta? <a href="login.html">Inicia sesión aquí.</a></p>
     <p class="lineaRegistro"><a href="index.html">Volver a la galería</a></p>
-    <script src="js/registro.js"></script>
+    
     <footer>
       <div>
           <p>&copy;Concurso de tapas 2025</p>
@@ -67,5 +68,7 @@
           <a href="https://x.com/"><img src="img/icons8-twitterx.svg" alt="x" class="logo"></a>
       </div>
     </footer>
+    <script src="js/registro.js"></script>
+    <script src="jsBootstrap/bootstrap.bundle.js"></script>
   </body>
 </html>
