Añadidas tapas y mejoras
- Añadidos algunos bares.
- Añadida paginación.
- Añadida alerta para cuando se añade un nuevo bar.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <button type="submit">Añadir</button>
       </form>
     </section>
+    
+    <div role="alert" id="alertaAñadir"></div>
 
     <div id="carouselExampleInterval" class="carousel slide slider_container" data-bs-ride="carousel">
       <div class="carousel-inner">
@@ -66,7 +68,9 @@
       <div id="galeria" class="galeria-grid"></div>
     </section>
   </main>
-
+  <nav>
+    <div id="listaPaginas" class="d-flex justify-content-center mt-4 mb-4"></div>
+  </nav>
   <footer>
     <div>
         <p>&copy;Concurso de tapas 2025</p>
@@ -79,5 +83,6 @@
   </footer>
   <script src="js/galeria.js"></script>
   <script src="jsBootstrap/bootstrap.bundle.js"></script>
+
 </body>
 </html>
