--- a/index.html
+++ b/index.html
@@ -14,14 +14,17 @@
     <div class="logo">
         <a href="index.html" class="home-link"><img src="img/logotipo.svg" alt="Logotipo"></a>
         <a href="index.html" class="home-link">Concurso de tapas</a>
-    </div>
+      </div>
       <div class="d-flex align-items-center text-end d-flex flex-wrap">
-        <form class="d-inline-block me-4 ">
-          <input type="search" class="form-horizontal form-control form-control-dark" placeholder="Buscar..." aria-label="Buscar">
+        <form class="d-flex align-items-center buscador">
+          <button type="submit" class="btn btn-outline-dark">
+            <i class="bi bi-search"></i> Buscar
+          </button>
+          <input type="search" class="form-control me-2" placeholder="Buscar..." aria-label="Buscar">
         </form>
         <a href="login.html"><button type="button" class="d-inline-block btn btn-outline-dark me-2">Iniciar sesión</button></a>
         <a href="registro.html"><button type="button" class="d-inline-block btn btn-primary">Registrarse</button></a>
-      </div>  
+      </div>
   </header>
 
   <main>
@@ -31,7 +34,7 @@
         <input type="text" id="nombreBar" placeholder="Nombre del Bar" required>
         <input type="text" id="nombreTapa" placeholder="Nombre de la Tapa" required>
         <input type="url" id="urlImagen" placeholder="URL de la Imagen (opcional)">
-        <button type="submit">Añadir</button>
+        <button type="submit" id="btnAdd">Añadir</button>
       </form>
     </section>
     
@@ -83,6 +86,6 @@
   </footer>
   <script src="js/galeria.js"></script>
   <script src="jsBootstrap/bootstrap.bundle.js"></script>
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
 </body>
 </html>
