Mensaje de bienvenida
- Añadido mensaje de bienvenida a la página

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <button type="submit" id="btnAdd">Añadir</button>
       </form>
     </section>
-    
+    <section id="mensaje-bienvenida" class="text-center my-4"></section>
     <div role="alert" id="alertaAñadir"></div>
 
     <div id="carouselExampleInterval" class="carousel slide slider_container" data-bs-ride="carousel">
