--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     <div id="carouselExampleInterval" class="carousel slide slider_container" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active slider" data-bs-interval="5000">
-          <img src="img/AlitasPollo-1080.webp" class="d-block w-100 slide_img" alt="...">
+          <img src="img/12.webp" class="d-block w-100 slide_img" alt="...">
         </div>
         <div class="carousel-item slider" data-bs-interval="5000">
-          <img src="img/patatasBravas2-1080.webp" class="d-block w-100 slide_img" alt="...">
+          <img src="img/13.webp" class="d-block w-100 slide_img" alt="...">
         </div>
         <div class="carousel-item slider" data-bs-interval="5000">
-          <img src="img/TortillaPro-1080.webp" class="d-block w-100 slide_img" alt="...">
+          <img src="img/14.webp" class="d-block w-100 slide_img" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
