--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         <a href="index.html" class="home-link"><img src="img/logotipo.svg" alt="Logotipo"></a>
         <a href="index.html" class="home-link">Concurso de tapas</a>
       </div>
-      <div class="d-flex align-items-center text-end d-flex flex-wrap">
+      <div class="d-flex align-items-center text-end flex-wrap separacion">
         <form class="d-flex align-items-center buscador">
           <button type="submit" class="btn btn-outline-dark">
             <i class="bi bi-search"></i> Buscar
           </button>
           <input type="search" class="form-control me-2" placeholder="Buscar..." aria-label="Buscar">
         </form>
-        <a href="login.html"><button type="button" class="d-inline-block btn btn-outline-dark me-2">Iniciar sesión</button></a>
-        <a href="registro.html"><button type="button" class="d-inline-block btn btn-primary">Registrarse</button></a>
+        <a href="login.html"><button type="button" class="d-inline-block btn btn-outline-dark me-2 button">Iniciar sesión</button></a>
+        <a href="registro.html"><button type="button" class="d-inline-block btn btn-primary button">Registrarse</button></a>
       </div>
   </header>
 
@@ -43,13 +43,13 @@
     <div id="carouselExampleInterval" class="carousel slide slider_container" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active slider" data-bs-interval="5000">
-          <img src="img/AlitasPollo-1080.webp" class="d-block w-100 slide_img" alt="...">
+          <img src="img/AlitasPollo-1080.webp" class="d-block w-100 slide_img" alt="AlitasPollo">
         </div>
         <div class="carousel-item slider" data-bs-interval="5000">
-          <img src="img/patatasBravas2-1080.webp" class="d-block w-100 slide_img" alt="...">
+          <img src="img/patatasBravas2-1080.webp" class="d-block w-100 slide_img" alt="patatasBravas">
         </div>
         <div class="carousel-item slider" data-bs-interval="5000">
-          <img src="img/TortillaPro-1080.webp" class="d-block w-100 slide_img" alt="...">
+          <img src="img/TortillaPro-1080.webp" class="d-block w-100 slide_img" alt="Tortilla">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
