--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <a href="index.html" class="home-link">Concurso de tapas</a>
       </div>
       <div class="d-flex align-items-center text-end d-flex flex-wrap">
-        <form class="d-flex align-items-center buscador">
+        <form class="d-flex align-items-center buscador" id="formularioBusqueda">
           <button type="submit" class="btn btn-outline-dark">
             <i class="bi bi-search"></i> Buscar
           </button>
-          <input type="search" class="form-control me-2" placeholder="Buscar..." aria-label="Buscar">
+          <input type="search" class="form-control me-2" id="inputBusqueda" placeholder="Buscar..." aria-label="Buscar">
         </form>
         <a href="login.html"><button type="button" class="d-inline-block btn btn-outline-dark me-2">Iniciar sesión</button></a>
         <a href="registro.html"><button type="button" class="d-inline-block btn btn-primary">Registrarse</button></a>
@@ -84,6 +84,7 @@
     </div>
   </footer>
   <script src="js/galeria.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="jsBootstrap/bootstrap.bundle.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
 </body>
