--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   </header>
 
   <main>
+    <section id="iniciadoSesion"></section>
     <section class="seccion-formulario">
       <h2>Añadir Bar</h2>
       <form id="formularioAñadirBar">
