--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   </header>
 
   <main>
-    <section id="iniciadoSesion"></section>
-    <section class="seccion-formulario">
+    <section id="iniciadoSesion" class="text-center"></section>
+    <!-- <section class="seccion-formulario">
       <h2>Añadir Bar</h2>
       <form id="formularioAñadirBar">
         <input type="text" id="nombreBar" placeholder="Nombre del Bar" required>
@@ -38,7 +38,7 @@
         <button type="submit" id="btnAdd">Añadir</button>
       </form>
     </section>
-    <div role="alert" id="alertaAñadir"></div>
+    <div role="alert" id="alertaAñadir"></div> -->
 
     <div id="carouselExampleInterval" class="carousel slide slider_container" data-bs-ride="carousel">
       <div class="carousel-inner">
@@ -84,7 +84,7 @@
         <a href="https://x.com/"><img src="img/icons8-twitterx.svg" alt="x" class="logo"></a>
     </div>
   </footer>
-  <script src="js/prueba.js"></script>
+  <script src="js/galeria.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="jsBootstrap/bootstrap.bundle.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
